# biz/router/diy_routes.go
@@ -2,7 +2,6 @@ package router
 
 import (
 	"easyimage_go/biz/handler"
-	"easyimage_go/biz/mw"
 
 	"github.com/gin-gonic/gin"
 )
@@ -11,5 +10,4 @@ func diyRoutes(apiGroup *gin.RouterGroup) {
 	apiGroup.GET("/ping", handler.Ping)
 	apiGroup.GET("/server_info", handler.ServerInfo)
 	apiGroup.GET("/metrics", handler.Metrics)
-	apiGroup.GET("/test_token", mw.TokenAuthMiddleware(), handler.TestToken)
 }
